@@ -21,6 +21,8 @@ blit, fill
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12...
 slice
  1... 2... 3... 6... 7... 8...
+init
+ 1... 2... 3... 4...
 
 ------ Array2 --------
 
@@ -38,6 +40,8 @@ sub
  1... 2...
 slice
  1... 2... 3... 4... 5... 6... 7... 8...
+init
+ 1... 2... 3... 4...
 
 ------ Array3 --------
 
@@ -53,12 +57,18 @@ size_in_bytes_three
  1...
 slice1
  1... 2... 3... 4... 5... 6... 7...
+init
+ 1... 2... 3... 4...
 size_in_bytes_general
  1...
+init
+ 1... 2... 3... 4...
 ------ Array0 --------
 
 create/set/get
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12...
+init
+ 1... 2...
 kind_size_in_bytes
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12... 13...
 
